chore: Improve test coverage and leverage parametrized tests more